src/test/ui/borrowck/two-phase-reservation-sharing-interference-2.ast.stderr
error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
  --> $DIR/two-phase-reservation-sharing-interference-2.rs:19:5
   |
LL |     let shared = &v;
   |                   - immutable borrow occurs here
LL | 
LL |     v.extend(shared);
   |     ^ mutable borrow occurs here
...
LL | }
   | - immutable borrow ends here

error[E0502]: cannot borrow `v` as immutable because it is also borrowed as mutable
  --> $DIR/two-phase-reservation-sharing-interference-2.rs:30:15
   |
LL |     v.extend(&v);
   |     -         ^- mutable borrow ends here
   |     |         |
   |     |         immutable borrow occurs here
   |     mutable borrow occurs here

error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
  --> $DIR/two-phase-reservation-sharing-interference-2.rs:42:5
   |
LL |     let shared = &v;
   |                   - immutable borrow occurs here
LL | 
LL |     v.push(shared.len());
   |     ^ mutable borrow occurs here
...
LL | }
   | - immutable borrow ends here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0502`.
